Otimização de service do winrar. Implementação de rotinas de teste.