@@ -6,22 +6,22 @@
 
     <groupId>com.fenix</groupId>
     <artifactId>ordenarArquivos</artifactId>
-    <version>1.0.8-SNAPSHOT</version>
+    <version>1.0.9-SNAPSHOT</version>
     <name>OrdenarArquivos</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>17</java.version>
         <kotlin.version>1.8.0</kotlin.version>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
 
         <test.junit.version>5.10.2</test.junit.version>
         <test.testfx.version>4.0.18</test.testfx.version>
         <test.mockito.version>5.9.0</test.mockito.version>
         <test.mockito-kotlin.version>5.2.1</test.mockito-kotlin.version>
 
-        <javafx.version>18-ea+2</javafx.version>
+        <javafx.version>17.0.2</javafx.version>
         <jfoenix.version>9.0.10</jfoenix.version>
         <animatefx.version>1.2.3</animatefx.version>
         <constrolsfx.version>11.1.1</constrolsfx.version>
@@ -362,6 +362,29 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix
+                        --add-exports javafx.graphics/com.sun.glass.ui=com.jfoenix
+                        --add-exports javafx.base/com.sun.javafx.binding=com.jfoenix
+                        --add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
+                        --add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix
+                        --add-exports javafx.base/com.sun.javafx.event=com.jfoenix
+
+                        --add-opens javafx.graphics/com.sun.javafx.stage=com.jfoenix
+                        --add-opens javafx.graphics/com.sun.glass.ui=com.jfoenix
+                        --add-opens javafx.base/com.sun.javafx.binding=com.jfoenix
+                        --add-opens javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix
+                        --add-opens javafx.controls/com.sun.javafx.scene.control=com.jfoenix
+                        --add-opens javafx.base/com.sun.javafx.event=com.jfoenix
+                        --add-opens javafx.graphics/com.sun.javafx.tk=org.testfx
+
+                        -Dtestfx.robot=glass
+                        -Dtestfx.headless=true
+                        -Dprism.order=sw
+                        -Djavafx.verbose=true
+                    </argLine>
+                </configuration>
             </plugin>
 
             <!-- Sources -->
@@ -497,8 +520,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
 
